--- a/SNSFFW/preview/Components.html
+++ b/SNSFFW/preview/Components.html
@@ -17,10 +17,15 @@ Date: 01.08.2018
         <meta name="author" content="SLIDE and SCROLL">
         <meta name="robots" content="noindex, nofollow">
 
-        <link rel="shortcut icon" href="favicon.ico" />
-        <link rel="stylesheet" media="all" href="css/SNSFFW.css" />
+        <link rel="shortcut icon" href="../favicon.ico" />
+        <link rel="stylesheet" media="all" href="../css/SNSFFW.css" />
 
-        <style></style>
+        <style>
+            code {
+                background-color: var(--SNSFFW_FirstColor_2);
+                color: var(--SNSFFW_FirstColor_4);
+            }
+        </style>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script src="../js/SNSFFW.js"></script>
 
@@ -28,17 +33,9 @@ Date: 01.08.2018
     </head>
     <body class="SNSFFW-ThemeAccra--Light">
         <div class="SNSFFW-Container__Centered--Width60">
-            <h4 class="SNSFFW-Font__FirstColor--3">Layout</h4>
-            <p class="SNSFFW-Font__LineHeight--High">
-                <a href="preview/Layout.html">Layout</a><br />
-            </p>
-            <p>&nbsp;</p>
-            <h4 class="SNSFFW-Font__FirstColor--3">Content</h4>
-            <p class="SNSFFW-Font__LineHeight--High">
-                <a href="preview/Typography.html">Typography</a><br />
-                <a href="preview/Elements.html">Elements</a><br />
-                <a href="preview/Components.html">Components</a><br />
-            </p>
+            <h1 class="SNSFFW-Font__FirstColor--3">Content</h1>
+            <h2 class="SNSFFW-Font__FirstColor--3">Components</h2>
+            <h3 class="SNSFFW-Font__FirstColor--3">Accordions</h3>
         </div>
-    </body>
+</body>
 </html>
