--- a/SNSFFW/preview/Layout.html
+++ b/SNSFFW/preview/Layout.html
@@ -22,7 +22,7 @@ Date: 01.08.2018
         <link rel="stylesheet" media="all" href="../css/SNSFFW.css" />
 
         <style></style>
-        <script src="../js/jquery/jquery-3.3.1.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script src="../js/SNSFFW.js"></script>
 
         <script src=""></script>
