--- a/SNSFFW/preview/Typography.html
+++ b/SNSFFW/preview/Typography.html
@@ -27,7 +27,7 @@ Date: 01.08.2018
                 color: var(--SNSFFW_FirstColor_4);
             }
         </style>
-        <script src="../js/jquery/jquery-3.3.1.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script src="../js/SNSFFW.js"></script>
 
         <script src=""></script>
