--- a/testing.html
+++ b/testing.html
@@ -19,7 +19,7 @@ Date: 01.08.2018
         
         <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro:400,400i,700,700i|Libre+Franklin:200,200i,300,300i,400,400i,500,500i,600,600i|Taviraj:200,200i,300,300i,400,400i,500,500i,600,600i&amp;subset=latin-ext" rel="stylesheet">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <link rel="stylesheet" media="all" href="SNSFFW.min.css" />
+        <link rel="stylesheet" media="all" href="SNSFFW/SNSFFW.min.css" />
         <style>
             code {
                 background-color: var(--SNSFFW_FirstColor_2);
@@ -28,7 +28,7 @@ Date: 01.08.2018
         </style>
 
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-        <script src="SNSFFW.min.js"></script>
+        <script src="SNSFFW/SNSFFW.min.js"></script>
         <script>
             $(document).ready(function () {
                 $('.ChangeColorTheme:contains("Accra light")').click(function(){$('body').removeClass().addClass('SNSFFW-ThemeAccra--Light');});
