--- a/testing.html
+++ b/testing.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 <!--
-SLIDE and SCROLL - FFW v1.1.2
+SLIDE and SCROLL - FFW v1.2.0
 https://snsffw.slideandscroll.com
 
 Copyright 2018-2019 SLIDE and SCROLL by Daniel Friedrich
@@ -20,6 +20,7 @@ Date: 01.08.2018
         <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro:400,400i,700,700i|Libre+Franklin:200,200i,300,300i,400,400i,500,500i,600,600i|Taviraj:200,200i,300,300i,400,400i,500,500i,600,600i&amp;subset=latin-ext" rel="stylesheet">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" media="all" href="SNSFFW/SNSFFW.min.css" />
+        <!-- <link rel="stylesheet" media="all" href="SNSFFW/SNSFFW.css" /> -->
         <style>
             code {
                 background-color: var(--SNSFFW_FirstColor_2);
